[gd_scene load_steps=9 format=2]

[ext_resource path="res://Interface/Themes/theme_ui.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Themes/theme_title.tres" type="Theme" id=2]
[ext_resource path="res://Interface/Styleboxes/stylebox_button_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://Interface/Styleboxes/stylebox_button.tres" type="StyleBox" id=4]
[ext_resource path="res://Interface/Styleboxes/stylebox_menu.tres" type="StyleBox" id=5]
[ext_resource path="res://Interface/Styleboxes/stylebox_button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Interface/TurnBasedMenuUIScript.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="TurnBasedMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.309
margin_top = -180.025
margin_right = 255.691
margin_bottom = 179.975
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToChooseModeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = 305.015
margin_right = 29.0
margin_bottom = 331.015
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.5
margin_top = 261.227
margin_right = 24.5
margin_bottom = 287.227
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -163.06
margin_top = 56.1865
margin_right = 160.94
margin_bottom = 120.187
theme = ExtResource( 2 )
text = "Turn Based"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionContainer" type="Panel" parent="."]
margin_left = 93.1031
margin_top = 112.603
margin_right = 417.103
margin_bottom = 240.603
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoOfTurnsLabel" type="Label" parent="SelectionContainer"]
margin_top = 24.0
margin_right = 317.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "Number of turns:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSizeLabel" type="Label" parent="SelectionContainer"]
margin_top = 70.0
margin_right = 312.0
margin_bottom = 88.0
theme = ExtResource( 1 )
text = "Map Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="50TurnsButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 31.0
margin_top = 24.0
margin_right = 67.0
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
pressed = true
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="100TurnsButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 70.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="250TurnsButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 112.0
margin_top = 24.0
margin_right = 162.0
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "250"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="32x32SizeButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.4719
margin_top = 69.9463
margin_right = 27.5281
margin_bottom = 95.9463
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
pressed = true
text = "32x32"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="64x64SizeButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 19.5281
margin_top = 69.5258
margin_right = 95.5281
margin_bottom = 95.5258
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "64x64"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="128x128SizeButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 87.5281
margin_top = 69.9463
margin_right = 175.528
margin_bottom = 95.9463
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "128x128"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackToChooseModeButton" to="." method="_on_BackToChooseModeButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SelectionContainer/50TurnsButton" to="." method="_on_50TurnsButton_pressed"]
[connection signal="pressed" from="SelectionContainer/100TurnsButton" to="." method="_on_100TurnsButton_pressed"]
[connection signal="pressed" from="SelectionContainer/250TurnsButton" to="." method="_on_250TurnsButton_pressed"]
[connection signal="pressed" from="SelectionContainer/32x32SizeButton" to="." method="_on_32x32SizeButton_pressed"]
[connection signal="pressed" from="SelectionContainer/64x64SizeButton" to="." method="_on_64x64SizeButton_pressed"]
[connection signal="pressed" from="SelectionContainer/128x128SizeButton" to="." method="_on_128x128SizeButton_pressed"]
